优化代码结构2.0，完善异常错误处理，优化函数参数设置
